--- a/.github/workflows/preview-pr-build.yaml
+++ b/.github/workflows/preview-pr-build.yaml
@@ -57,6 +57,13 @@ jobs:
           projectName: rle-wiki-preview # Cloudflare Pages 项目名称
           directory: docs/.vitepress/dist # 构建输出目录
 
-      # 第八步：获取预览链接并发送到 PR
+  comment_on_pr:
+    needs: deploy
+    runs-on: ubuntu-latest
+    steps:
+      # 第九步：获取预览链接并发送到 PR
       - name: 调用 B 仓库的工作流
         uses: Leetfs-dev/CI-CD/.github/workflows/comment-pr-preview-link.yml@main
+        with:
+          preview_link: ${{ steps.deploy.outputs.url }}  # 传递生成的预览链接
+          pr_number: ${{ github.event.pull_request.number }}  # 传递 PR 编号
