--- a/.github/workflows/preview-pr-build.yaml
+++ b/.github/workflows/preview-pr-build.yaml
@@ -1,6 +1,9 @@
 name: 部署 PR 到 Cloudflare Pages
 
 on:
+  push:
+    branches:
+      - 'main'
   pull_request_target:
     types: [opened, synchronize, reopened, ready_for_review]
     paths:
