--- a/.github/workflows/preview-pr-build.yaml
+++ b/.github/workflows/preview-pr-build.yaml
@@ -26,10 +26,10 @@ jobs:
           fetch-depth: 0
 
       # 第二步：检出 PR 修改的部分
-      - name: 检出 PR 修改的部分
-        run: |
-          git fetch origin +refs/pull/${{ github.event.pull_request.number }}/merge
-          git checkout -qf FETCH_HEAD
+      # - name: 检出 PR 修改的部分
+      #   run: |
+      #     git fetch origin +refs/pull/${{ github.event.pull_request.number }}/merge
+      #     git checkout -qf FETCH_HEAD
 
       # 第三步：安装 pnpm
       - name: 安装 pnpm
@@ -61,5 +61,6 @@ jobs:
           directory: docs/.vitepress/dist # 构建输出目录
 
   comment_on_pr:
+    needs: deploy
     uses: Leetfs-dev/CI-CD/.github/workflows/comment-pr-preview-link.yml@main
     secrets: inherit
