--- a/.github/workflows/preview-pr-build.yaml
+++ b/.github/workflows/preview-pr-build.yaml
@@ -61,3 +61,5 @@ jobs:
     needs: deploy
     uses: Leetfs-dev/CI-CD/.github/workflows/comment-pr-preview-link.yml@main
     secrets: inherit
+    with:
+      steps.deploy.outputs.url: ${{ steps.deploy.outputs.url }}
