--- a/.github/workflows/preview-pr-build.yaml
+++ b/.github/workflows/preview-pr-build.yaml
@@ -15,7 +15,6 @@ jobs:
     runs-on: ubuntu-latest
     outputs:
       preview_url: ${{ steps.deploy.outputs.url }}
-
     steps:
       # 第一步：检出主仓库代码
       - name: 检出主仓库代码
@@ -63,3 +62,5 @@ jobs:
     needs: deploy
     uses: Leetfs-dev/CI-CD/.github/workflows/comment-pr-preview-link.yml@main
     secrets: inherit
+    with:
+          previewUrl: ${{ needs.deploy.outputs.preview_url }}
