--- a/.github/workflows/preview-pr-build.yaml
+++ b/.github/workflows/preview-pr-build.yaml
@@ -13,8 +13,7 @@ jobs:
   deploy:
     if: github.event.pull_request.draft == false
     runs-on: ubuntu-latest
-    outputs:
-      preview_url: ${{ steps.deploy.outputs.url }}
+
     steps:
       # 第一步：检出主仓库代码
       - name: 检出主仓库代码
@@ -63,4 +62,4 @@ jobs:
     uses: Leetfs-dev/CI-CD/.github/workflows/comment-pr-preview-link.yml@main
     secrets: inherit
     with:
-          previewUrl: ${{ needs.deploy.outputs.preview_url }}
+          previewUrl: ${{ needs.steps.deploy.outputs.url }}
